--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		Before that, I received my bachelor's degree from the NUAA in 2023, as a member of <a href="https://changkong.nuaa.edu.cn/">Changkong Innovation Class</a>, where I was advised by <a href="http://inet-nuaa.cn/kunzhu/">Prof. Kun Zhu</a>.
 		</p>
 
-		<p>My research focuses on developing Mobile Sensing/Vision Systems, with a particular emphasis on Time-of-Flight (ToF) depth cameras and Rolling Shutter Cameras. 
+		<p>My research focuses on developing Mobile Sensing/Vision Systems, with a particular emphasis on Time-of-Flight (ToF) depth cameras and rolling shutter cameras. 
 			I am also passionate about developing interesting camera applications for Android and iOS mobile devices.
 		</p>
         
